# EvaluationSMA

./: README.md  ingest.py  main.py  pyproject.toml
agents/: generator.py  planner.py  researcher.py  supervisor.py
config/: llm.py
graph/: workflow.py
prompts/: generator.txt  planner.txt  researcher.txt  supervisor.txt
tools/: retriever.py
vector_db/: index.faiss  index.pkl
