[project]
name = "planificateur de voayage"
version = "0.1.0"
description = "Assistant intelligent de planification de voyage: Système multi-agent avec RAG multi-corpus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "pypdf>=4.3.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.38.0",]

    [project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
